--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
 asgiref==3.3.1
+boto3==1.16.59
+botocore==1.19.59
 certifi==2020.12.5
 chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.1.4
 django-countries==7.0
 django-heroku==0.3.1
+django-storages==1.11.1
 gunicorn==20.0.4
 idna==2.10
+jmespath==0.10.0
 Pillow==8.0.1
+pkg-resources==0.0.0
 psycopg2==2.8.6
+python-dateutil==2.8.1
 pytz==2020.5
 requests==2.25.1
+s3transfer==0.3.4
+six==1.15.0
 sqlparse==0.4.1
 stripe==2.55.1
 urllib3==1.26.2
